Fix dialogs hidden under the pane

--- a/app/less/ui.less
+++ b/app/less/ui.less
@@ -41,7 +41,6 @@
         padding: 0;
         margin: 0;
         min-height: 100%;
-        margin-left: @ui-vertical-divider-width;
         left: 0;
     }
 
@@ -156,11 +155,9 @@
     .CodeMirror-dialog {
         left: 0;
         right: 0;
-        z-index: 15;
         padding: .6em .8em;
         overflow: hidden;
         color: @ui-dialog-color;
-        position: fixed;
         font-family: inherit;
         font: small-caption;
         font-size: @ui-font-size;
